<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.HomeFragment"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_app"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            />
        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated"
                android:textColor="#939393"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical|end"
                />
            <TextView
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#939393"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="2dp"
                />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp"
            android:weightSum="10">
            <TextView
                android:id="@+id/id_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/id_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/value"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/id_loader_go"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:tint="@color/grey2"
        android:layout_gravity="center"
        android:src="@drawable/loader_icon"
        android:importantForAccessibility="no"
        />
    <TextView
        android:id="@+id/button_update"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/back_update"
        android:gravity="center"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="70dp"
        android:visibility="gone"/>
</FrameLayout>